              + utils/liouvillian_fp
              + utils/orthonormalize
              + utils/tensorsum
              b state/subsref: works now
              * lmap/tensor, state/tensor: singleton handling...
              * lmap/display: scalars, labels, low-nnz lmaps
              * state/check: checks all properties before raising an error
              * state/prob: assume state ops are hermitian
              * utils/spectral_decomposition: sorting added
              * examples/nmr_sequences now accepts user-given seqs as well

0.10.0      2014-07-08
              - Octave 3.0 hacks removed
              - state/is_ket
              + new physical constants
              + refs.bib: list of references
              + lmap/conj
              + lmap/is_ket
              + lmap/is_concatenable
              + state/subsystems
              + utils/comm
              + utils/acomm
              + utils/unravel_index
              + invariant/LU
              + examples/bernstein_vazirani
              b utils/plot_adiabatic_evolution: eigs call now works for non-real matrices as well
              b state/negativity: extra sqrt removed
              b examples/qft_circuit: now nonpalindromic dimension vectors work too
              * state/entropy also gives Rényi entropies.
              * utils/lrmul simplified
              * hamiltonian/heisenberg takes now a connection graph as input
              * renames:
                 state/seq_propagate    =>   seq/propagate
                 utils/liouvillian_fp   =>   utils/superop_fp
                 utils/plot_2q_corr     =>   utils/plot_correlation_simplex

0.10.1  in progress
              b markov/ops: warns of possible RWA violations
              + lmap/tensorpow
              + gate/werner
              + gate/isotropic
              + gate/copydot
              + examples/werner_states
              + examples/magic_state_distillation
              * utils/unravel_index works on vectors of indices