@@ -182,3 +182,4 @@ b bugfix
               + examples/werner_states
               + examples/magic_state_distillation
               * utils/unravel_index works on vectors of indices
+              * utils/tensorbasis returns the integer locality of each element
